--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:sqlserver://localhost/PaidTimeOff
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=PaidTimeOff
 spring.datasource.username=sa
 spring.datasource.password=reallyStrongPwd123
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
